feat : callback implemented, custom attribute saved in user defaults.

--- a/WebEngageSampleApp/Base.lproj/Main.storyboard
+++ b/WebEngageSampleApp/Base.lproj/Main.storyboard
@@ -83,7 +83,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="7sF-6x-LN9">
-                                <rect key="frame" x="46.666666666666657" y="305.66666666666669" width="300" height="241.00000000000006"/>
+                                <rect key="frame" x="46.666666666666657" y="286" width="300" height="280.33333333333326"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign In" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3aj-MQ-hv0">
                                         <rect key="frame" x="0.0" y="0.0" width="300" height="36"/>
@@ -109,8 +109,14 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="JWT is mandotary if security is enabled*" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7vn-Yy-ebM">
+                                        <rect key="frame" x="0.0" y="196" width="300" height="19.333333333333343"/>
+                                        <fontDescription key="fontDescription" name="AlNile" family="Al Nile" pointSize="14"/>
+                                        <color key="textColor" systemColor="systemRedColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yMw-gg-UPv">
-                                        <rect key="frame" x="0.0" y="196" width="300" height="45"/>
+                                        <rect key="frame" x="0.0" y="235.33333333333337" width="300" height="45"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="bL0-cc-8bq"/>
                                         </constraints>
@@ -129,6 +135,7 @@
                                     <constraint firstItem="yMw-gg-UPv" firstAttribute="centerX" secondItem="7sF-6x-LN9" secondAttribute="centerX" id="12p-td-s3i"/>
                                     <constraint firstAttribute="trailing" secondItem="3aj-MQ-hv0" secondAttribute="trailing" id="4xi-KU-Y1s"/>
                                     <constraint firstItem="3aj-MQ-hv0" firstAttribute="leading" secondItem="7sF-6x-LN9" secondAttribute="leading" id="GMN-Tj-Mi6"/>
+                                    <constraint firstItem="7vn-Yy-ebM" firstAttribute="leading" secondItem="HhG-bz-ROG" secondAttribute="leading" id="Swd-4R-cvq"/>
                                 </constraints>
                             </stackView>
                         </subviews>
@@ -228,6 +235,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
